# KDE

./: README.md
Plasmoids/Linux.Org.Ru/: metadata.desktop
Utils/Imageshack.us/: CMakeLists.txt  INSTALL  ImageShack.png.uu  README.RU.md  README.md  compilepy.sh  iconsgen.sh  imageshack.us.desktop  screenshot
Utils/Imageshack.us/.tmp/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
Utils/Imageshack.us/.tmp/_CPack_Packages/Linux/DEB/: imageshackus_0.0.1.deb
Utils/Imageshack.us/.tmp/_CPack_Packages/Linux/DEB/imageshackus_0.0.1/: control  md5sums
Utils/Imageshack.us/debian/: changelog  control  rules
Utils/Imageshack.us/src/: iconsgen.sh  imageshack.us.py  screenshot
Utils/Imageshack.us/src/debian/: changelog  control  copyright  rules
Utils/Imageshack.us/src/debian/patches/: imageshackus.patch  series
Utils/Imageshack.us/src/debian/source/: include-binaries
